# cyberselfplay-env

./: .dockerignore  .gitignore  Blog.md  Blogs.md  Dockerfile  Makefile  README.md  client.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  run_demo.py
cyber_selfplay_env/: __init__.py  curriculum.py  environment.py  metrics.py  models.py  rubrics.py  scenarios.py  simulator.py  tools_blue.py  tools_red.py
notebook/: League(PFSP).ipynb  League_(PFSP_+_PSRO).ipynb  League_(PSRO) (1).ipynb  SFT_→_GRPO_(Anti_Collapse_Regularization).ipynb  SFT_→_GRPO_(Vanilla).ipynb
notebooks/: colab_trl_selfplay.ipynb
server/: __init__.py  app.py
tests/: conftest.py  test_env.py  test_pfsp_psro.py  test_rollouts.py
train/: README-GRPO.md  __init__.py  _bootstrap.py  colab_trl_selfplay.py  evaluate_league.py  grpo_space.py  kaggle_grpo.py  kaggle_grpo_league.py  pfsp.py  psro_meta.py  train_blue_vs_pool.py  train_red_vs_pool.py
