[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-cyber-selfplay"
version = "0.1.0"
description = "Cyber defense red-vs-blue self-play environment for OpenEnv (Theme 4: self-improvement, Theme 2: long-horizon reasoning)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hackathon Team" }]
keywords = ["openenv", "rl", "cybersecurity", "self-play", "trl", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "openenv-core[core]>=0.2.2",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
train = [
  "trl>=0.10.0",
  "transformers>=4.40.0",
  "datasets>=2.19.0",
  "accelerate>=0.30.0",
  "peft>=0.11.0",
  "matplotlib>=3.8.0",
  "huggingface_hub>=0.23.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
cyber-selfplay-server = "server.app:main"

[tool.setuptools]
packages = ["cyber_selfplay_env", "server", "train"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"
